--- a/src/page/App.css
+++ b/src/page/App.css
@@ -13,6 +13,8 @@
   }
 }
 
+
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -32,7 +34,23 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+* {
+  font-family: Helvetica-Neue, Helvetica, Arial, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  letter-spacing: 2.29px;
+}
+
+h1 {
+  text-transform: uppercase;
 }
