--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,43 @@
 @font-face {
-  font-family: 'HelveticaNeue';
-  src: local('HelveticaNeue'), url(./fonts/HelveticaNeueLTStd-UltLt.woff2) format('woff');
+  font-family: 'Helvetica-Neue';
+  src: url('./fonts/HelveticaNeueLTStd-UltLt.woff2') format('woff2');
+  font-weight: 100;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'HelveticaNeue';
-  src: local('HelveticaNeue'), url(./fonts/HelveticaNeueLTStd-Roman.woff2) format('woff');
+  font-family: 'Helvetica-Neue';
+  src: url('./fonts/HelveticaNeueLTStd-Lt.woff2') format('woff2');
+  font-weight: 200;
+  font-style: normal;
 }
 
+@font-face {
+  font-family: 'Helvetica-Neue';
+  src: url('./fonts/HelveticaNeueLTStd-Roman.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica-Neue';
+  src: url('./fonts/HelveticaNeueLTStd-Md.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica-Neue';
+  src: url('./fonts/HelveticaNeueLTStd-Bd.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+}
+
+* {
+  font-family: "Helvetica-Neue", Helvetica, Arial, sans-serif;
+}
 
 body {
   margin: 0;
-  font-family: 'HelveticaNeue-UL', 'HelveticaNeue-Roman', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Helvetica-Neue", Helvetica, Arial, sans-serif;
 }
