--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,43 @@
 @font-face {
   font-family: 'Helvetica-Neue';
-  src: url('./fonts/HelveticaNeueLTStd-UltLt.woff2') format('woff2');
+  src: url('fonts/HelveticaNeueLTStd-UltLt.woff2');
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica-Neue';
-  src: url('./fonts/HelveticaNeueLTStd-Lt.woff2') format('woff2');
+  src: url('fonts/HelveticaNeueLTStd-Lt.woff2');
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica-Neue';
-  src: url('./fonts/HelveticaNeueLTStd-Roman.woff2') format('woff2');
+  src: url('fonts/HelveticaNeueLTStd-Roman.woff2');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica-Neue';
-  src: url('./fonts/HelveticaNeueLTStd-Md.woff2') format('woff2');
+  src: url('fonts/HelveticaNeueLTStd-Md.woff2');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Helvetica-Neue';
-  src: url('./fonts/HelveticaNeueLTStd-Bd.woff2') format('woff2');
+  src: url('fonts/HelveticaNeueLTStd-Bd.woff2');
   font-weight: 600;
   font-style: normal;
 }
 
 * {
-  font-family: "Helvetica-Neue", Helvetica, Arial, sans-serif;
+  font-family: Helvetica-Neue, Helvetica, Arial, sans-serif;
 }
 
 body {
   margin: 0;
-  font-family: "Helvetica-Neue", Helvetica, Arial, sans-serif;
+  font-family: Helvetica-Neue, Helvetica, Arial, sans-serif;
 }
