--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,7 +1,10 @@
-.header {
-    background-color: #fff;
-}
+.header {}
 
-.closed {
-    background-color: aquamarine;
+.closed {}
+
+.centeredChildren {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
