--- a/src/index.css
+++ b/src/index.css
@@ -34,10 +34,9 @@
 }
 
 * {
-  font-family: Helvetica-Neue, Helvetica, Arial, sans-serif;
-}
-
-body {
   margin: 0;
   font-family: Helvetica-Neue, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  text-transform: uppercase;
+  box-sizing: border-box;
 }
