--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,34 @@
 @font-face {
-  font-family: 'Helvetica-Neue';
-  src: url('fonts/HelveticaNeueLTStd-UltLt.woff2');
+  font-family: "Helvetica-Neue";
+  src: url("fonts/HelveticaNeueLTStd-UltLt.woff2");
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Helvetica-Neue';
-  src: url('fonts/HelveticaNeueLTStd-Lt.woff2');
+  font-family: "Helvetica-Neue";
+  src: url("fonts/HelveticaNeueLTStd-Lt.woff2");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Helvetica-Neue';
-  src: url('fonts/HelveticaNeueLTStd-Roman.woff2');
+  font-family: "Helvetica-Neue";
+  src: url("fonts/HelveticaNeueLTStd-Roman.woff2");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Helvetica-Neue';
-  src: url('fonts/HelveticaNeueLTStd-Md.woff2');
+  font-family: "Helvetica-Neue";
+  src: url("fonts/HelveticaNeueLTStd-Md.woff2");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Helvetica-Neue';
-  src: url('fonts/HelveticaNeueLTStd-Bd.woff2');
+  font-family: "Helvetica-Neue";
+  src: url("fonts/HelveticaNeueLTStd-Bd.woff2");
   font-weight: 600;
   font-style: normal;
 }
